--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -7,9 +7,7 @@
 trigger:
 - main
 
-pool:
-  vmImage: ubuntu-latest
-
+pool:fede2WSL
 steps:
 - script: echo Hello, world!
   displayName: 'Run a one-line script'
