--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,4 +1,5 @@
 trigger:
+
   branches:
     include:
       - main
@@ -29,3 +30,11 @@ steps:
       buildNumber: '$(Build.BuildNumber)'
       projectKey: 'prova2'
       skipLogin: false
+  - task: ArtifactoryDocker@1
+    inputs:
+    command: 'pull'
+    artifactoryService: 'JFrog Andrea Registry'
+    sourceRepo: 'prova2'
+    collectBuildInfo: true
+    buildName: '$(Build.DefinitionName)'
+    buildNumber: '$(Build.BuildNumber)'
