--- a/immagine/Dockerfile
+++ b/immagine/Dockerfile
@@ -1,5 +1,18 @@
-FROM nginx
 
-WORKDIR /app
- 
-COPY . /usr/share/nginx/index.html
+ARG BASEIMAGE
+
+FROM $BASEIMAGE
+
+#FROM nginx
+
+RUN echo $BASEIMAGE
+
+RUN rm /etc/nginx/conf.d/*
+
+RUN echo "files are deleted"
+
+ADD helloworld.conf /etc/nginx/conf.d/
+
+ADD index.html /usr/share/nginx/html/
+
+ADD arti-error.txt /usr/share/nginx/html/
